err/strikepackage.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/XenAPI-1.2.egg-info'...
Compiling './lib/python3.5/site-packages/XenAPI.py'...
***   File "./lib/python3.5/site-packages/XenAPI.py", line 64
    except Exception, exn:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/hipchat'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/kaptan'...
Listing './lib/python3.5/site-packages/kaptan/handlers'...
Listing './lib/python3.5/site-packages/kaptan-0.5.9.egg-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/progress'...
Listing './lib/python3.5/site-packages/progress-1.3.egg-info'...
Listing './lib/python3.5/site-packages/python_simple_hipchat-0.4.0.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/schema-0.6.7.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/strikepackage'...
Compiling './lib/python3.5/site-packages/strikepackage/config.py'...
***   File "./lib/python3.5/site-packages/strikepackage/config.py", line 138
    os.makedirs(dirpath, 0755)
                            ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/strikepackage/engage.py'...
***   File "./lib/python3.5/site-packages/strikepackage/engage.py", line 56
    print "\nCooldown expired."
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/strikepackage/examples'...
Compiling './lib/python3.5/site-packages/strikepackage/mchm.py'...
***   File "./lib/python3.5/site-packages/strikepackage/mchm.py", line 91
    print "\nPhone Home detected."
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/strikepackage/packages'...
Compiling './lib/python3.5/site-packages/strikepackage/packages/provision.py'...
***   File "./lib/python3.5/site-packages/strikepackage/packages/provision.py", line 65
    if len(all) <> 1:
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/strikepackage/puppet.py'...
***   File "./lib/python3.5/site-packages/strikepackage/puppet.py", line 59
    print "Attempting to sign node CSR..."
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/strikepackage/strikepackage.py'...
***   File "./lib/python3.5/site-packages/strikepackage/strikepackage.py", line 43
    print "PROTIP: Check out ~/.strikepackage"
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/strikepackage/utils.py'...
***   File "./lib/python3.5/site-packages/strikepackage/utils.py", line 22
    print "[{}] {}".format(i, rec[0])
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/strikepackage/xenserver.py'...
***   File "./lib/python3.5/site-packages/strikepackage/xenserver.py", line 12
    print "Enter XenServer API credentials:"
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/strikepackage-0.5.3.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
